# vr_recovery

./: .gitignore  .soma  .workspace  CLAUDE.md  HELP.json  README.md  __main__.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/auto-generate-docs/: generate_claude_md.py  install-hooks.sh
.claude/hooks/: session-start.sh
.claude/scripts/: session-start.sh
cases/: __init__.py  list.py
cases/list/: __init__.py  core.py
reflex/: __init__.py
src/vr_recovery/: __init__.py  __main__.py
src/vr_recovery/cases/list/: __init__.py  core.py
tests/: test_cli.py  test_quick.py
website/: README.html  VIEW-WEBSITE.txt  cost-calculator.html  faq.html  founder-story.html  index.html  pitch.html
website/.vercel/: project.json
