[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vr-recovery-cli"
version = "0.1.0"
description = "VR Recovery CLI tool for case management and operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Coa Solutions", email = "dev@coa.solutions"}
]
# Note: Common deps (pydantic, python-dotenv, aiohttp, python-dateutil,
# markdown, beautifulsoup4, jinja2, etc.) are provided by cli_framework
dependencies = []

[project.optional-dependencies]
dev = [
    "anthropic>=0.73.0",       # Only for maintenance scripts
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vr-recovery = "vr_recovery.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
